# openrelik-worker-yara

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image fraken.yaml  python-test.yaml
fraken-x/src/: main.rs
src/: app.py  tasks.py
