[tool.poetry]
name = "openrelik-worker-yara"
version = "2025.05.30"
description = "Scan a local directory using Fraken-X"
authors = ["Thomas Chopitea <tomchop@gmail.com>", "Fry <fryx0r@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
